tests/neg-custom-args/captures/closure-result-typing.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/closure-result-typing.scala:2:30 -------------------------
2 |  val x: () -> Object = () => c // error
  |                              ^
  |                              Found:    (c : Object^)
  |                              Required: Object
  |
  |                              Note that capability any is not included in capture set {}.
  |
  |                              where:    ^ and any refer to a root capability in the type of parameter c
  |
  | longer explanation available when compiling with `-explain`
